--- a/api/package.json
+++ b/api/package.json
@@ -16,11 +16,22 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.16.1",
-    "express": "^5.1.0"
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
+    "ws": "^8.18.3",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.0",
+    "@types/ws": "^8.18.1",
     "prisma": "^6.16.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
